<resources>
    <string name="app_name">LifeTok</string>
    <string name="search_hint">Search</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_create">Create</string>
    <string name="title_post">Post</string>
    <string name="title_profile">Profile</string>
    <string name="title_event">Event</string>
    <string name="title_settings">Settings</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_phone">Phone #</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_fName">First Name</string>
    <string name="prompt_lName">Last Name</string>
    <string name="prompt_username">Username</string>

    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="show_password">Show Password</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>

    <string name="profile_picture">Profile Picture</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="delete">Delete</string>


    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >6 characters and not contain white space</string>
    <string name="login_failed">Login Failed</string>
    <string name="event_location">Event Location</string>
    <string name="event_description">Event Description</string>
    <string name="event_name">Event Name</string>

    <string name="prompt_public">Public</string>
    <string name="refresh_map">Refresh Map</string>
    <string name="take_picture">Take Picture</string>
    <string name="take_video">Take Video</string>
    <string name="get_from_gallery">Get From Gallery</string>
    <string name="event_media">Event Media</string>
    <string name="no_posts_from_followers">No posts from followers</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="event_time">Event Time</string>
</resources>
