<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sszabo.life_tok.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_map"
            app:destination="@id/nav_map"
            app:enterAnim="@android:animator/fade_in"
            app:exitAnim="@android:animator/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_map"
        android:name="com.sszabo.life_tok.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_nav_map_to_nav_event_view"
            app:destination="@id/nav_event_view"
            app:enterAnim="@android:animator/fade_in"
            app:exitAnim="@android:animator/fade_out" />
        <action
            android:id="@+id/action_nav_map_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@android:animator/fade_in"
            app:exitAnim="@android:animator/fade_out"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_create"
        android:name="com.sszabo.life_tok.ui.create.CreateFragment"
        android:label="@string/title_create"
        tools:layout="@layout/fragment_create">
        <action
            android:id="@+id/action_nav_create_to_nav_post"
            app:destination="@id/nav_post"
            app:enterAnim="@android:animator/fade_in"
            app:exitAnim="@android:animator/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.sszabo.life_tok.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_nav_profile_to_nav_settings"
            app:destination="@id/nav_settings"
            app:enterAnim="@android:animator/fade_in"
            app:exitAnim="@android:animator/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_post"
        android:name="com.sszabo.life_tok.ui.create.post.PostFragment"
        android:label="@string/title_post"
        tools:layout="@layout/fragment_post">
        <action
            android:id="@+id/action_nav_post_to_nav_create"
            app:destination="@id/nav_create"
            app:enterAnim="@android:animator/fade_in"
            app:exitAnim="@android:animator/fade_out"
            app:popUpTo="@id/nav_create"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_event_view"
        android:name="com.sszabo.life_tok.ui.event.EventViewFragment"
        android:label="@string/title_event"
        tools:layout="@layout/fragment_event_view">
        <action
            android:id="@+id/action_nav_event_view_to_nav_map"
            app:destination="@id/nav_map"
            app:enterAnim="@android:animator/fade_in"
            app:exitAnim="@android:animator/fade_out"
            app:popUpTo="@id/nav_map"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.sszabo.life_tok.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_nav_settings_to_nav_profile"
            app:destination="@id/nav_profile"
            app:enterAnim="@android:animator/fade_in"
            app:exitAnim="@android:animator/fade_out"
            app:popUpTo="@id/nav_profile"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>
