<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".ui.login.RegisterActivity">

    <ScrollView
        android:id="@+id/scrollView0"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="60dp"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/txt_firstName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_text_input"
                android:drawablePadding="10dp"
                android:hint="@string/prompt_fName"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/grey"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt_lastName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_text_input"
                android:drawablePadding="10dp"
                android:hint="@string/prompt_lName"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/grey"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_email_input"
                android:drawablePadding="10dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/grey"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt_phone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_text_input"
                android:drawablePadding="10dp"
                android:hint="@string/prompt_phone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/grey"
                android:textSize="20sp"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/txt_address"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_text_input"
                android:drawablePadding="10dp"
                android:hint="@string/prompt_address"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/grey"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt_username"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_text_input"
                android:drawablePadding="10dp"
                android:hint="@string/prompt_username"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/grey"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_pass_input"
                android:drawablePadding="10dp"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/grey"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_pass_input"
                android:drawablePadding="10dp"
                android:hint="@string/prompt_confirm_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/grey"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@color/royal_blue"
                android:text="@string/action_create_account"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@android:color/white"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>