<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_profile"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:elevation="12dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_post_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_view_profile"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/title_profile"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_outline_add_a_photo_24" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txt_post_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:hint="@string/prompt_username"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_num_followers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_view_profile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_num_followers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_followers"
        app:layout_constraintEnd_toStartOf="@+id/txt_num_following"
        app:layout_constraintStart_toStartOf="@+id/txt_post_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_post_name" />

    <TextView
        android:id="@+id/txt_followers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/followers"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_following"
        app:layout_constraintStart_toStartOf="@+id/txt_post_name"
        app:layout_constraintTop_toBottomOf="@id/txt_num_followers" />

    <TextView
        android:id="@+id/txt_num_following"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_num_followers"
        app:layout_constraintTop_toTopOf="@id/txt_num_followers"
        app:layout_constraintStart_toEndOf="@+id/txt_num_followers"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/txt_following"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/following"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_followers"
        app:layout_constraintTop_toTopOf="@+id/txt_followers" />
</androidx.constraintlayout.widget.ConstraintLayout>
